syntax = "proto3";

option csharp_namespace = "UserService.Grpc";

service UserService {
  rpc GetUserById (GetUserByIdRequest) returns (GetUserByIdResponse);
}

message GetUserByIdRequest {
  string user_id = 1;
}

message GetUserByIdResponse {
  string user_id = 1;
  string email = 2;
  string phone_number = 3;
  string name = 4;
  string surname = 5;
}